# modular-public

./: .instructions.txt  README.md  aird.diff  base.py  generate_manifest.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  starting_state.json  templates.py  tester.py
.github/workflows/: pr-and-main.yaml
modules/: .discriminators.py.swp  actors.py  discriminators.py  generators.py  prompters.py  tools.py
tests/: conftest.py
tests/modules/: test_actors.py  test_prompters.py  test_tools.py
