[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "modular-public"
version = "1.1.2"
description = ""
authors = ["METR <team@metr.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

pydantic = "^2.6.4"
tiktoken = "^0.7.0"

[tool.poetry.dependencies.pyhooks]
git = "https://github.com/METR/vivaria.git"
rev = "main"
subdirectory = "pyhooks"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.7"
pyfakefs = "^5.7.1"
pyright = "^1.1.381"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-watcher = "^0.4.3"
ruff = "^0.6.7"

[tool.ruff]
line-length = 88
